# spin2win

./: Cargo.toml  README.md  build.sh
.cargo/: config
docker/: Dockerfile  build.md
src/: lib.rs
