[package]
name = "spin2win"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
contract-sdk = { rev = "cc47fbfb94034cc3fbc94c5ae4487065ccde016e", git = "https://github.com/cennznet/contract-sdk" }
ink_core = { git = "https://github.com/paritytech/ink", rev = "4a8584338af92cb1897aa7350d1d377699b137e6" }
ink_lang = { git = "https://github.com/paritytech/ink", features = ["generate-api-description"], rev = "4a8584338af92cb1897aa7350d1d377699b137e6" }
ink_model = { git = "https://github.com/paritytech/ink", rev = "4a8584338af92cb1897aa7350d1d377699b137e6" }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }

[lib]
name = "spin2win"
crate-type = ["cdylib"]

[features]
default = [
	"ink_lang/generate-api-description"
]
generate-api-description = [
	"ink_lang/generate-api-description"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
