[package]
name = "spin2win"
version = "0.1.0"
authors = ["Centrality Developers <developers@centrality.ai>"]
edition = "2018"

[dependencies]
contract-sdk = { git = "https://github.com/cennznet/contract-sdk", version = "0.1.2", default-features = false }
parity-codec = { version = "3.2", default-features = false, features = ["derive"] }

[lib]
name = "spin2win"
crate-type = ["cdylib"]

[features]
default = [
	"contract-sdk/generate-api-description"
]
generate-api-description = [
	"contract-sdk/generate-api-description"
]

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
